[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectraforge"
version = "0.1.0"
description = "Async TechPowerUp GPU database scraper + Excel ladder exporter"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SpectraForge Maintainers" }
]
keywords = ["gpu", "scraper", "techpowerup", "playwright", "asyncio", "excel"]
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0",
  "httpx>=0.27.0,<0.28",
  "playwright>=1.41.2,<2.0",
  "tenacity>=8.2.3,<9.0",
  "lxml>=4.9.0,<5.0",
  "openpyxl>=3.1.2,<4.0"
]

[project.scripts]
spectraforge-scrape = "gpu_ladder.scrape_techpowerup:main"
spectraforge-retry = "gpu_ladder.retry_failed_details:main"
spectraforge-export = "gpu_ladder.export_gpu_excel:main"

[tool.setuptools.packages.find]
where = ["src"]
